--- a/main/templates/main/customer/completedorder.html
+++ b/main/templates/main/customer/completedorder.html
@@ -74,26 +74,10 @@
 		{% endfor %}
 	</div>
 	<div class="col-12 mx-auto col-md-10">
-		<div class="row justify-content-between">
-
-			<div class="order-tracking completed">
-				<a href="{% url 'customer_pending_order' %}">
-					<span class="is-complete"></span>
-					<p>Pending<br></p>
-				</a>
-			</div>
-			<div class="order-tracking completed">
-				<a href="{% url 'customer_process_order' %}">
-					<span class="is-complete"></span>
-					<p>In-process<br></p>
-				</a>
-			</div>
-			<div class="order-tracking completed">
-				<a href="{% url 'customer_completed_order' %}">
-					<span class="is-complete"></span>
-					<p>Completed<br></p>
-				</a>
-			</div>
+		<div class="d-flex justify-content-around bd-highlight">
+			<div class="p-2 bd-highlight"><a href="{% url 'customer_pending_order' %}" class="btn btn-primary p-2"><i class="fa fa-clock"></i><br> Pending</a></div>
+			<div class="p-2 bd-highlight"><a href="{% url 'customer_process_order' %}" class="btn btn-primary p-2"><i class="fa fa-spinner"></i><br> In-process</a></div>
+			<div class="p-2 bd-highlight"><a href="{% url 'customer_completed_order' %}" class="btn btn-warning p-2"><i class="fa fa-check-circle"></i><br> Completed</a></div>
 		</div>
 	</div>
 
@@ -111,52 +95,36 @@
 					<table id="example" class="table">
 						<thead>
 							<tr>
-								<th>Image</th>
-								<th>Foods</th>
-								<th>Quantity</th>
+								<th>Order No.</th>
 								<th>Order Mode</th>
 								<th>Status</th>
+								<th>Total Amount</th>
 								<th class="text-center">Action</th>
 							</tr>
 						</thead>
-						{% for order in orders %}
 						<tbody>
 							<tr>
-								<td>
-									<a href="{{ order.product.image.url}}">
-										<img width="50" src="{{ order.product.image.url}}" alt="vehicle">
-									</a>
-								</td>
-								<td>{{ order.product.name }}</td>
-								<td>{{ order.quantity }}</td>
-								<td>{{ order.order_mode }}</td>
-								<td class="text-success">{{ order.status }}</td>
+								<td>2023091012</td>
+								<td>Delivery</td>
+								<td class="text-success">Completed</td>
+								<td>200</td>
 								<td class="text-center">
-									<a class="btn btn-sm btn-info"
-										name="{{ order.product.name }}"
-										category="{{ order.product.category }}"
-										price="{{ order.product.price }}"
-										PrepTime="{{ order.product.PrepTime }}"
-										total_price="{{ order.product.price }}"
-										description="{{ order.product.description }}"
-										quantity = "{{ order.quantity }}"
-										order_mode="{{ order.order_mode }}"
-										data-bs-toggle="modal" 
-										data-bs-target="#viewModal">
+									<a class="btn btn-sm btn-info" href="{% url 'customer_orderlist' %}">
 										<i data-feather="eye"></i>
 									</a>
-									<a class="btn btn-sm btn-warning" data-bs-toggle="modal" id=""
-									   data-bs-target="#rateModal{{ order.id }}">
+									<a class="btn btn-sm btn-warning" type="button" data-bs-toggle="modal" id=""
+									data-bs-target="#rateModal">
 										<i data-feather="thumbs-up"></i>
 									</a>
 								</td>
 							</tr>
 						</tbody>
+
 						<!-- Cancel Modal -->
-						<div class="modal fade" id="rateModal{{ order.id }}">
+						<div class="modal fade" id="rateModal">
 							<div class="modal-dialog">
 								<div class="modal-content">
-									<form action="{% url 'customer_feedback' order.id %}" method="POST" id="ca_frm">
+									<form action="" method="POST" id="ca_frm">
 										{% csrf_token %}
 										<div class="modal-header">
 											<h5 class="modal-title" id="exampleModalLabel">FeedBack</h5>
@@ -165,7 +133,7 @@
 										</div>
 										<div class="modal-body">
 											<label for="message">Feedback:</label> <br>
-											<textarea name="message" id="message" cols="55" rows="7"></textarea>
+											<textarea class="form-control" name="message" id="message" cols="55" rows="7"></textarea>
 											<br>
 											<p>Rating:</p>
 											<div class="rate">
@@ -190,7 +158,7 @@
 								</div>
 							</div>
 						</div>
-						{% endfor %}
+
 					</table>
 				</div>
 			</div>
