--- a/main/templates/main/main-layout.html
+++ b/main/templates/main/main-layout.html
@@ -81,7 +81,9 @@
             <ul class="menu-items">
                 <li><a href="/#home">Home</a></li>
                 <li><a href="/#collection">Categories</a></li>
+                <li><a href="{% url 'main_food' %}">Foods</a></li>
                 <li><a href="/#foods">Top Sales</a></li>
+                <li><a href="{% url 'customer_placeorder_order' %}">Cart</a></li>
                 <li><a href="/#contact">Contact</a></li>
             </ul>
             <h1><img src="{% static 'img/logo.jpg' %}" width="30"> Legit Busog Restaurant</h1>
