--- a/main/static/css/foodproduct.css
+++ b/main/static/css/foodproduct.css
@@ -68,6 +68,59 @@
     border: 1px solid #FF4343;
     transition: 0.5s;
 }
+
+.foodproduct .buy-now button:disabled,
+.foodproduct .buy-now button[disabled]{
+    padding: 10px 15px;
+    margin-top: 5px;
+    font-size: 14px;
+    cursor: pointer;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 10px;
+    font-weight: 500;
+    border: 1px solid #999999;
+    background-color: #cccccc;
+    color: #666666;
+}
+
+.foodproduct .buy-now button:disabled:hover,
+.foodproduct .buy-now button[disabled]:hover {
+    padding: 10px 15px;
+    margin-top: 5px;
+    font-size: 14px;
+    cursor: not-allowed;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 10px;
+    font-weight: 500;
+    border: 1px solid #999999;
+    background-color: #cccccc;
+    color: #666666;
+}
+
+.foodproduct .buy-now button:disabled:hover a,
+.foodproduct .buy-now button[disabled]:hover a{
+    cursor: not-allowed;
+    background-color: #cccccc;
+    color: #666666;
+}
+
+.foodproduct .buy-now button,
+.foodproduct .add-cart button {
+    padding: 10px 15px;
+    margin-top: 5px;
+    font-size: 14px;
+    cursor: pointer;
+    text-transform: uppercase;
+    background-color: #FF4343;
+    color: var(--white);
+    border: none;
+    border-radius: 10px;
+    font-weight: 500;
+    border: 1px solid #FF4343;
+    transition: 0.5s;
+}
 .foodproduct .buy-now button:hover,
 .foodproduct .add-cart button:hover {
     background-color: var(--white);
