--- a/main/static/css/viewproduct.css
+++ b/main/static/css/viewproduct.css
@@ -94,6 +94,9 @@ select {
     color: #000;
     border-radius: 10px;
     padding: 14px 20px;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
     border: none;
     cursor: pointer;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -106,6 +109,9 @@ select {
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
     cursor: pointer;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
