--- a/main/templates/main/pages/foodproduct.html
+++ b/main/templates/main/pages/foodproduct.html
@@ -11,7 +11,9 @@ List of Food
 
 {% block content %}
 <section id="search" class="container2">
-    <input type="text" class="search" placeholder="Search Food Name">
+    <form method="get">
+        <input type="search" name="search" class="search" placeholder="Search Food Name">
+    </form>
 </section>
 
 <section id="foods">
@@ -28,25 +30,64 @@ List of Food
                         <p>{{ food.name }}</p>
                     </div>
                     <div class="rating">
+                        {% if food.ratings <= 1.5 %}
+                        <span>{{ food.ratings |floatformat:1 }}/5.0</span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        {% elif food.ratings >= 1.6 and food.ratings <= 2.5 %}
+                        <span>{{ food.ratings |floatformat:1 }}/5.0</span>
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star"></span>
                         <span class="fa fa-star"></span>
                         <span class="fa fa-star"></span>
+                        {% elif food.ratings >= 2.6 and food.ratings <= 3.5 %}
+                        <span>{{ food.ratings |floatformat:1 }}/5.0</span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        {% elif food.ratings >= 3.6 and food.ratings <= 4.5 %}
+                        <span>{{ food.ratings |floatformat:1 }}/5.0</span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        {% elif food.ratings >= 4.6 and food.ratings <= 5 %}
+                        <span>{{ food.ratings |floatformat:1 }}/5.0</span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        {% endif %}
                     </div>
                     <div class="price">
                         &#8369; {{ food.price }}
                         <div class="colors">
-                            <i class='bx bxs-circle red'></i>
-                            <i class='bx bxs-circle blue'></i>
-                            <i class='bx bxs-circle white'></i>
+                            {% if food.availability == 0 %}
+                            <i class='red'>Unavailable</i>
+                            {% elif food.availability == 1 %}
+                            <i class='blue'>Available</i>
+                            {% endif %}
                         </div>
                     </div>
                     <div class="buy-now">
+                        {% if food.availability == 0 %}
+                        <button disabled><a>Buy Now</a></button>
+                        {% elif food.availability == 1 %}
                         <button><a href="{% url 'main_food_show' food.id %}">Buy Now</a></button>
+                        {% endif %}
                     </div>
                 </div>
             </div>
+            {% empty %}
+            <h1 style="color:red">No Food Data Found!</h1>
             {% endfor %}
 
         </div>
