--- a/main/templates/main/pages/placeorder.html
+++ b/main/templates/main/pages/placeorder.html
@@ -17,14 +17,16 @@ List of Food
 
 <section id="foods">
     <div class="header">
-        <h2>Your Placed Order</h2>
+        <h2>Your Cart Order</h2>
     </div>
     <div class="seller container2">
+
+
         <div class="container-product">
             <div class="product-image">
-                <img src="{% static 'img/logo.jpg' %}" alt="img">
+                <img src="{% static 'img/logo.jpg' %}"alt="img">
             </div>
-            <div class="product-details">
+            <div class="product-details" style="align-self: center;">
                 <div class="product-header">
                     <h3>Item Name</h3>
                     <h1>Price</h1>
@@ -36,19 +38,17 @@ List of Food
                                 <tr>
                                     <th>Quantity</th>
                                     <th>Price</th>
-                                    <th>Order Mode</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>10</td>
-                                    <td>1000.00</td>
-                                    <td>Dine-In</td>
+                                    <td>100.00</td>
                                 </tr>
                             </tbody>
                             <tfoot>
                                 <tr>
-                                    <td colspan="2">Total:</td>
+                                    <td>Total Amount:</td>
                                     <td>1000.00</td>
                                 </tr>
                             </tfoot>
@@ -56,10 +56,79 @@ List of Food
                     </div>
                 </div>
                 <div class="product-footer">
-                    <a class="btn-back" onclick="window.history.go(-1); return false;">Back</a>
-                    <a class="btn-place-order" href="{% url 'main_food_success' %}">Buy</a>
+                    <a class="btn-back">Remove This</a>
+                    <a class="btn-place-order" href="{% url 'main_food_success' %}">Buy This Only</a>
                 </div>
             </div>
+        </div>
+
+        <div class="container-product">
+            <div class="product-image">
+                <img src="{% static 'img/logo.jpg' %}"alt="img">
+            </div>
+            <div class="product-details" style="align-self: center;">
+                <div class="product-header">
+                    <h3>Item Name</h3>
+                    <h1>Price</h1>
+                </div>
+                <div class="cont-mo">
+                    <div class="more-details">
+                        <table class="order-table">
+                            <thead>
+                                <tr>
+                                    <th>Quantity</th>
+                                    <th>Price</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>10</td>
+                                    <td>100.00</td>
+                                </tr>
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <td>Total Amount:</td>
+                                    <td>1000.00</td>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                </div>
+                <div class="product-footer">
+                    <a class="btn-back">Remove This</a>
+                    <a class="btn-place-order" href="{% url 'main_food_success' %}">Buy This Only</a>
+                </div>
+            </div>
+        </div>
+
+        <table class="order-table">
+            <thead>
+                <tr>
+                    <th colspan="2">Summary Order</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Address:</td>
+                    <td><input class="product-qty" type="text" name="location" placeholder="Type here your address"></td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td>Order Mode:</td>
+                    <td>Delivery</td>
+                </tr>
+                <tr>
+                    <td>Total Order:</td>
+                    <td>2000.00</td>
+                </tr>
+            </tfoot>
+        </table>
+        <div class="product-footer">
+            <a class="btn-back" onclick="window.history.go(-1); return false;">Back</a>
+            <a class="btn-place-order" href="{% url 'main_food_success' %}">Remove all</a>
+            <a class="btn-place-order" href="{% url 'main_food_success' %}">Check Out</a>
         </div>
     </div>
    
